# dcs-daq

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp  opcua_server.py  qrc.qrc  style.css
src/: AGraphicsScene.cpp  AGraphicsScene.h  acamerapro.cpp  acamerapro.h  agraphicsview.cpp  agraphicsview.h  agraphicsview.ui  arectitem.cpp  arectitem.h  arectlist.cpp  arectlist.h  arectlist.ui  arectlistitem.cpp  arectlistitem.h  arectlistitem.ui  ataginputdialog.cpp  ataginputdialog.h  ataginputdialog.ui  config.h  crossitem.cpp  crossitem.h  itemlist.cpp  itemlist.h  itemlist.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  tempgraphicsitem.cpp  tempgraphicsitem.h
src/ocr/: ppocrv4.cpp  ppocrv4.h
src/opc/: opc.cpp  opc.h
src/utils/: config.cpp  config.h  utils.cpp  utils.h
